[package]
name = "classifiles"
version = "0.1.0"
authors = ["Jan Noha <nohajc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree_magic_mini = "1.0.0"
magic = { git = "https://github.com/gourlaysama/rust-magic", branch = "missing-flags" }
roxmltree = "0.13.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
mime-db = "0.1.5"
fnv = "1.0"
walkdir = "2"
rand = "0.7"
